--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javac.target>11</javac.target>
         <kotlin.version>1.7.22</kotlin.version>
+        <kotlinx.coroutines.version>1.6.4</kotlinx.coroutines.version>
         <jupiter.version>5.9.1</jupiter.version>
     </properties>
 
@@ -27,6 +28,11 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>${kotlinx.coroutines.version}</version>
         </dependency>
 
         <dependency>
