--- a/bfs-benchmark/pom.xml
+++ b/bfs-benchmark/pom.xml
@@ -37,10 +37,10 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>quicksort-benchmark</artifactId>
+    <artifactId>bfs-benchmark</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>quicksort-benchmark</name>
+    <name>bfs-benchmark</name>
 
     <!--
        This is the demo/sample template build script for building Kotlin benchmarks with JMH.
@@ -51,7 +51,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>quicksort</artifactId>
+            <artifactId>bfs</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -80,7 +80,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <!--
             Name of the benchmark Uber-JAR to generate.
           -->
-        <uberjar.name>quicksort-benchmarks</uberjar.name>
+        <uberjar.name>bfs-benchmarks</uberjar.name>
     </properties>
 
     <build>
